// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageHeader snapshots > renders actions slot 1`] = `
<div>
  <div
    class="mb-8"
  >
    <div
      class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-4"
    >
      <div>
        <h1
          class="text-2xl font-bold text-foreground"
        >
          Leads
        </h1>
      </div>
      <div
        class="flex items-center gap-3"
      >
        <button>
          Add Lead
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`PageHeader snapshots > renders all props together 1`] = `
<div>
  <div
    class="mb-8"
  >
    <a
      class="inline-flex items-center gap-1 text-xs text-gray-500 hover:text-teal transition-colors mb-3"
      href="/clients"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-arrow-left h-3.5 w-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m12 19-7-7 7-7"
        />
        <path
          d="M19 12H5"
        />
      </svg>
      Back
    </a>
    <div
      class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-4"
    >
      <div>
        <h1
          class="text-2xl font-bold text-foreground"
        >
          Client Detail
        </h1>
        <p
          class="text-sm text-gray-500 mt-1"
        >
          View and manage client
        </p>
      </div>
      <div
        class="flex items-center gap-3"
      >
        <button>
          Edit
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`PageHeader snapshots > renders backHref link when provided 1`] = `
<div>
  <div
    class="mb-8"
  >
    <a
      class="inline-flex items-center gap-1 text-xs text-gray-500 hover:text-teal transition-colors mb-3"
      href="/invoices"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-arrow-left h-3.5 w-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m12 19-7-7 7-7"
        />
        <path
          d="M19 12H5"
        />
      </svg>
      Back
    </a>
    <div
      class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-4"
    >
      <div>
        <h1
          class="text-2xl font-bold text-foreground"
        >
          Invoice #001
        </h1>
      </div>
    </div>
  </div>
</div>
`;

exports[`PageHeader snapshots > renders with title and description 1`] = `
<div>
  <div
    class="mb-8"
  >
    <div
      class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-4"
    >
      <div>
        <h1
          class="text-2xl font-bold text-foreground"
        >
          Invoices
        </h1>
        <p
          class="text-sm text-gray-500 mt-1"
        >
          Manage and track all invoices
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`PageHeader snapshots > renders with title only 1`] = `
<div>
  <div
    class="mb-8"
  >
    <div
      class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-4"
    >
      <div>
        <h1
          class="text-2xl font-bold text-foreground"
        >
          Clients
        </h1>
      </div>
    </div>
  </div>
</div>
`;
